@@ -135,7 +135,7 @@ Grob::get_print_stencil () const
 
       /* color support... see interpret_stencil_expression () for more... */
       SCM color = get_property ("color");
-      if (color != SCM_EOL)
+      if (scm_is_pair (color))
 	{
 	  SCM expr = scm_list_3 (ly_symbol2scm ("color"),
 				 color,
